[project]
name = "css-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.20.0",
    "ipython>=9.9.0",
    "manim>=0.19.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "streamlit>=1.53.1",
]
